# lawchers-skills

./: .gitignore  CODEX.md  README.md  package-lock.json  package.json  tsconfig.base.json  vitest.config.ts
legal-desensitizer/: AGENTS.md  CLAUDE.md  README.md  SKILL.md  legal-desens.spec  pyproject.toml  run_legal_desens.py
legal-desensitizer/agents/: openai.yaml
legal-desensitizer/legal_desens/: __init__.py  audit.py  batch.py  cli.py  decisions_apply.py  io.py  mask_export.py  model_install.py  pipeline_diag.py  prepare.py  profile.py  redact.py  restore.py  rules.py  scan.py  seal_detect.py  text_replace.py
legal-desensitizer/references/: optional-ner-models.md
legal-desensitizer/rules/: rules.json
legal-desensitizer/scripts/: build_binary.sh  build_wheelhouse.sh  create_fixtures.py  eval_cluener.py  export_cluener_onnx.py  export_hf_ner_onnx.py  install_with_model.sh
legal-desensitizer/spike_ocr_eval/: gen_spike_samples.py  run_spike.py
legal-desensitizer/tests/: gen_scan_fixtures.py  test_020a_detection_baseline.py  test_020b_detection_integration.py  test_020c_docx_complete.py  test_020d_text_pdf.py  test_020e_scan_redaction.py  test_020f_final_gate.py  test_021_scan_pipeline.py  test_batch_redact_case.py  test_decisions.py  test_decisions_pdf.py  test_document_io.py  test_format_matrix.py  test_model_installer.py  test_ner_annotation_schema.py  test_ner_decode.py  test_ner_engine.py  test_ner_eval_harness.py  test_pdf_support.py  test_prepare.py  test_preview_export_consistency.py  test_profile_redaction.py  test_redaction.py  test_scan_pipeline.py  (+2 more)
(+69 files in other folders)
