[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-desens"
version = "0.6.0"
description = "Legal document text desensitization CLI"
requires-python = ">=3.9"
dependencies = [
    "onnxruntime>=1.14",
    "tokenizers>=0.13",
    "lxml>=4.9",
    "python-docx>=0.8.11",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "Pillow>=9.0"]
ocr = ["rapidocr_onnxruntime>=1.3.0"]
parse-docling = ["docling>=2.0"]

[project.scripts]
legal-desens = "legal_desens.cli:main"

[tool.setuptools.packages.find]
include = ["legal_desens*"]

[tool.setuptools.package-data]
legal_desens = ["rules/*.json", "profiles/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
